[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/props/Destructable.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/props/ExplodingRock1.gd" type="Script" id=2]
[ext_resource path="res://assets/furniture/ExplodableSandRock1-sheet_v.png" type="Texture" id=3]
[ext_resource path="res://assets/effects/DustCloud-particles.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.9657

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.439966 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.705882, 0.705882, 0.705882, 0.956863, 1, 1, 1, 0 )

[node name="ExplodingRock1" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" parent="." index="1"]
position = Vector2( -1.56032, 0.780163 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3

[node name="CollisionShape2D" parent="." index="2"]
rotation = 2.18166
shape = SubResource( 1 )

[node name="CPUParticles2D" parent="." index="3"]
emitting = false
amount = 16
lifetime = 0.75
one_shot = true
randomness = 0.5
lifetime_randomness = 0.5
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 15.0
flag_align_y = true
spread = 180.0
gravity = Vector2( 0, 0 )
radial_accel = 200.0
radial_accel_random = 1.0
tangential_accel = 0.5
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="InvincibilityTimer" type="Timer" parent="." index="4"]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_ExplodingRock1_area_entered"]
